@@ -1,17 +1,21 @@
 package com.subrutin.catalog.security.util;
 
-import com.subrutin.catalog.security.model.impl.AccessJWTToken;
-import io.jsonwebtoken.Claims;
-import io.jsonwebtoken.Jwts;
-import io.jsonwebtoken.SignatureAlgorithm;
-import lombok.AllArgsConstructor;
-import org.springframework.security.core.GrantedAuthority;
-
+import java.util.Date;
 import java.security.Key;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.util.Collection;
-import java.util.Date;
+import java.util.stream.Collectors;
+
+import org.springframework.security.core.GrantedAuthority;
+
+import com.subrutin.catalog.security.model.AccessJWTToken;
+
+import io.jsonwebtoken.Claims;
+import io.jsonwebtoken.Jwts;
+import io.jsonwebtoken.SignatureAlgorithm;
+import io.jsonwebtoken.lang.Collections;
+import lombok.AllArgsConstructor;
 
 @AllArgsConstructor
 public class JWTTokenFactory {
@@ -19,9 +23,8 @@ public class JWTTokenFactory {
 	private final Key secret;
 
 	public AccessJWTToken createAccessJWTToken(String username, Collection<? extends GrantedAuthority> authorities) {
-
 		Claims claims = Jwts.claims().setSubject(username);
-		claims.put("scope", authorities.stream().map(GrantedAuthority::getAuthority).toList());
+		claims.put("scopes", authorities.stream().map(a -> a.getAuthority()).collect(Collectors.toList()));
 		LocalDateTime currentTime = LocalDateTime.now();
 		LocalDateTime expiredTime = currentTime.plusMinutes(15);
 		
@@ -29,7 +32,7 @@ public class JWTTokenFactory {
 		Date expiredTimeDate = Date.from(expiredTime.atZone(ZoneId.of("Asia/Jakarta")).toInstant());
 		
 		String token = Jwts.builder().setClaims(claims)
-			.setIssuer("https://subrutin.com").setIssuedAt(currentTimeDate)
+			.setIssuer("http://subrutin.com").setIssuedAt(currentTimeDate)
 			.setExpiration(expiredTimeDate)
 			.signWith(secret, SignatureAlgorithm.HS256).compact();
 
